--- a/index.html
+++ b/index.html
@@ -18,4 +18,10 @@
       <li><a href="#">Store</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
-  </nav>    
+  </nav>
+  <div class="banner">
+    <img class="img-flex" src="images/banner.svg">
+    <div class="banner-content">
+      <h2>Eat More Candy</h2>
+    </div>
+  </div>        
