--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Beau's Bonbons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatica+SC:700" rel="stylesheet">
 </head>
 <header>
   <h1>Beau's Bonbons</h1>
