--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatica+SC:700" rel="stylesheet">
 </head>
+<body>
 <header>
   <h1>Beau's Bonbons</h1>
   <nav>
@@ -20,8 +21,11 @@
     </ul>
   </nav>
   <div class="banner">
-    <img class="img-flex" src="images/banner.svg">
+    <img class="img-flex" src="images/banner.svg" alt="">
     <div class="banner-content">
       <h2>Eat More Candy</h2>
     </div>
   </div>
+</header>
+</body>
+</html>
