added About Us section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     </div>
   </div>
 </header>
+<section class="about">
+  <h2>About Us</h2>
+  <p>Welcome to Beau's Bonbons! We are a family owned business who prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
 </body>
 </html>
