added new font for body text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatica+SC:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -29,6 +30,6 @@
 </header>
 <section class="about">
   <h2>About Us</h2>
-  <p>Welcome to Beau's Bonbons! We are a family owned business who prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
+  <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
 </body>
 </html>
