stylized about us section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   </div>
 </header>
 <section class="about">
-  <h2>About Us</h2>
-  <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
+  <div class="body-about">
+    <h2>About Us</h2>
+    <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
+  </div>
 </body>
 </html>
