--- a/index.html
+++ b/index.html
@@ -33,5 +33,14 @@
     <h2>About Us</h2>
     <p>Welcome to Beau's Bonbons! We are a family owned business that prides ourselves in fresh, home made candy! We guarantee every piece will bring a smile to your face and back to your favourite childhood tastes! To learn more about our company and the faces behind it, <a href="#">click here for more information</a></p>
   </div>
+  <ul class="people">
+    <li class="card-one">
+      <img class="carl" src="images/carl.png" alt="">
+      <div class="card-body">
+      <p><strong>Carl</strong></p>
+      <p><small>Owner</small></p><p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
+      </div>
+    </li>
+  </ul>
 </body>
 </html>
