--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
     <li class="card-one">
       <img class="carl" src="images/carl.png" alt="">
       <div class="card-body">
-      <p><strong>Carl</strong></p>
-      <p><small>Owner</small></p><p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
+      <p><strong>Carl</strong><small>Owner</small></p>
+      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
+      </div>
+    </li>
+
+    <li class="card-one">
+      <img class="carl" src="images/carl.png" alt="">
+      <div class="card-body">
+      <p><strong>Carl</strong><small>Owner</small></p>
+      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
       </div>
     </li>
   </ul>
