--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </li>
 
     <li class="card-one">
-      <img class="carl" src="images/carl.png" alt="">
+      <img class="carl" src="images/russel.png" alt="">
       <div class="card-body">
-      <p><strong>Carl</strong><small>Owner</small></p>
-      <p>Carl is the owner and creator of Beau's Bonbons. He is passionate about great candy since his wife passed away. He is determined to bring her favourites to everyone.</p>
+      <p><strong>Russel</strong><small>Candy Creator</small></p>
+      <p>Russel is one of Carl's very good friends. So when he heard about the new candy store venture he was all in! He is the best at making the candy and coming up with new flavours!</p>
       </div>
     </li>
   </ul>
