created Dug's card

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
       <p>Russel is one of Carl's very good friends. So when he heard about the new candy store venture he was all in! He is the best at making the candy and coming up with new flavours!</p>
       </div>
     </li>
+
+    <li class="card-one">
+      <img class="carl" src="images/dug.png" alt="">
+      <div class="card-body">
+      <p><strong>Dug</strong><small>Best Friend</small></p>
+      <p>Dug is always willing to lend a helping hand and that's what makes him so important to us! He makes sure to spread the good mood and loves working here at Beau's!</p>
+      </div>
+    </li>
   </ul>
 </body>
 </html>
