creating products list

--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
       </div>
     </li>
   </ul>
+
+  <section class="products">
+    <ul>
+      <li class="prod-btn">
+        <a><img class="carl" src="images/cookie.svg" alt="">
+        <p>Cookies</p>
+        <a>
+      </li>
+
+
 </body>
 </html>
