--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
+
   <div class="banner">
     <img class="img-flex" src="images/banner.svg" alt="">
     <div class="banner-content">
@@ -60,12 +61,27 @@
   </ul>
 
   <section class="products">
-    <ul>
-      <li class="prod-btn">
-        <a><img class="carl" src="images/cookie.svg" alt="">
-        <p>Cookies</p>
-        <a>
+
+
+      <ul class="prod-list">
+        <li class="prod-btn">
+        <a href="#"><img class="prod" src="images/sour.png" alt="">
+        <div class="btn-content">
+          <h3>Candy</h3>
+        </div>
+      </a>
       </li>
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
