created other buttons

--- a/index.html
+++ b/index.html
@@ -63,16 +63,55 @@
   <section class="products">
 
 
+
       <ul class="prod-list">
         <li class="prod-btn">
-        <a href="#"><img class="prod" src="images/sour.png" alt="">
-        <div class="btn-content">
+          <a href="#"><img class="prod" src="images/sour.png" alt="">
+          <div class="btn-content">
+          <h3>Sour</h3>
+        </div>
+          </a>
+        </li>
+
+        <li class="prod-btn">
+          <a href="#"><img class="prod" src="images/gummies.png" alt="">
+          <div class="btn-content">
+          <h3>Gummies</h3>
+        </div>
+          </a>
+        </li>
+
+        <li class="prod-btn">
+          <a href="#"><img class="prod" src="images/candy.png" alt="">
+          <div class="btn-content">
           <h3>Candy</h3>
         </div>
-      </a>
-      </li>
+          </a>
+        </li>
 
+        <li class="prod-btn">
+          <a href="#"><img class="prod" src="images/cupcake.png" alt="">
+          <div class="btn-content">
+          <h3>Cupcakes</h3>
+        </div>
+          </a>
+        </li>
 
+        <li class="prod-btn">
+          <a href="#"><img class="prod" src="images/gum.png" alt="">
+          <div class="btn-content">
+          <h3>Gum</h3>
+        </div>
+          </a>
+        </li>
+
+        <li class="prod-btn">
+          <a href="#"><img class="prod" src="images/macaroon.png" alt="">
+          <div class="btn-content">
+          <h3>Macaroon</h3>
+        </div>
+          </a>
+        </li>
 
 
 
